[package]
name = "wk-image-format"
version = "2.0.0"
edition = "2021"
authors = ["Inggrit Setya Budi"]
description = "WK Image Format - Production-grade image format with Predictive Compression and Adaptive Block Quantization"
license = "MIT"
repository = "https://github.com/cowoksoftspoken/WK"

[dependencies]
image = "0.25"
byteorder = "1.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
num-traits = "0.2"
rayon = "1.10"
crc32fast = "1.4"
colored = "2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
egui_extras = { version = "0.29", optional = true, features = ["image"] }
rfd = { version = "0.14", optional = true }

[features]
default = []
viewer = ["eframe", "egui", "egui_extras", "rfd"]

[lib]
name = "wk_format"
path = "src/lib.rs"

[[bin]]
name = "wkconverter"
path = "src/main.rs"

[[bin]]
name = "wkdebug"
path = "src/bin/debug.rs"

[[bin]]
name = "wkviewer"
path = "src/bin/viewer.rs"
required-features = ["viewer"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3