[package]
name = "wk-image-format"
version = "3.1.1"
edition = "2021"
authors = ["Inggrit Setya Budi"]
description = "WK Image Format - Production-grade image format with CABAC, Multi-block DCT, HDR, and Animation support"
license = "MIT"
repository = "https://github.com/cowoksoftspoken/WK"

[dependencies]
image = "0.25"
byteorder = "1.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
num-traits = "0.2"
rayon = "1.10"
crc32fast = "1.4"
colored = "2.1"
wide = "0.7"
flate2 = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
egui_extras = { version = "0.29", optional = true, features = ["image"] }
rfd = { version = "0.14", optional = true }
wgpu = { version = "24", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[features]
default = []
simd = []
gpu = ["wgpu"]
viewer = ["eframe", "egui", "egui_extras", "rfd"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "js-sys", "web-sys"]

[lib]
name = "wk_format"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wkconverter"
path = "src/main.rs"

[[bin]]
name = "wkdebug"
path = "src/bin/debug.rs"

[[bin]]
name = "wkviewer"
path = "src/bin/viewer.rs"
required-features = ["viewer"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3